--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
         "laravel/sail": "^1.41",
         "mockery/mockery": "^1.6",
         "nunomaduro/collision": "^8.6",
-        "phpunit/phpunit": "^11.5.3"
+        "phpunit/phpunit": "^11.5.3",
+        "theanik/laravel-more-command": "^1.3"
     },
     "autoload": {
         "psr-4": {
